theres-lang/grammar
program        → realm+;

realm          → (declaration)* ;
realmDecl      → "realm" IDENT "{" declaration+ "}" ; 

declaration    → funDecl | globalDecl | instanceDecl | realmDecl ;

funSig         → "fun IDENT "(" funArgs? ")" "=>" IDENT;
funcDecl       → funSig block ;
funArgs        → selfArg? (arg) ("," arg)* ;
callArgs       → "(" expression? ("," expression)? ")" ;
selfArg        → "self" "," ;
arg            → IDENT ":" type ;

globalDecl     → "global" ( "const" )? 
  				 IDENT ":" IDENT ("=" expression)? ";" ;

instanceDecl   → "instance" IDENT genericParams "{" ( instanceField )* "}" ( "with" block )? ;
instanceField  → "const"? IDENT ":" type ";" ;

interfaceDecl  → "interface" IDENT "{" interfaceField* "}" ;
interfaceField → fnSig | funcDecl | localVariableStmt ;

applyDecl      → "apply" IDENT "for" IDENT "with" "{" ( interfaceField )* "}" ; 

type           → "fun" "(" type ( "," type )* ") "=>" type?
			   | "[" type "]"
			   | IDENT
			   | IDENT "<" type ("," type)* ">"
			   ;

genericParams  → IDENT (":" path ("+" path)*)


path           → IDENT ("::" IDENT)* ;

statement      → block
			   | expressionStmt
			   | localVariableStmt
			   | declaration ;


			
block         → "{" (declaration | statement) expression? "}" ;

localVariableStmt
              → ( "let" | "const" ) IDENT ":" IDENT ("=" expression)? ";" ;

ifExpr        → "if" expression block
				  ( "else" "if" block )?*
				  ( "else" block )? ;

whileExpr     → "while" expression block ;
untilExpr     → "until" expression block ;
forExpr       → "for" pat "in" expression block ;
loopExpr      → "loop" block;

lambdaExpr    → "\" pat ("," pat)*? "=>" (expression | block)
arrayExpr     → "[" expression "]" type ("{" expression ("," expression)* "}")?

returnExpr    → "return" expression? ;
pathExpr      → "::" IDENT ("::" IDENT)* ;

makeExpr      → "make" type callArgs ;

pat           → IDENT
		      | "(" IDENT ("," IDENT) ")"
		      | "_"
								
expressionStmt → expression ";" ;

expression     → assignment 
               | assignment ( ( "," expression ) )* ;

assignment     → bitwiseOr
				("=", "+=", "-=" | "*="
				| "%=" | "/=" | "<<=" | ">>="
				| "&=" | "^=" | "|=")
				bitwiseOr

bitwiseOr      → bitwiseXor ("|" bitwiseXor)*;
bitwiseXor     → bitwiseAnd ("^" bitwiseAnd)*;
bitwiseAnd     → logicOr ("&" logicOr)*;
logicOr        → logicAnd ("||" logicAnd)*;
logicAnd       → equality ("&&" equality)*;

equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → shifts ( ( ">" | ">=" | "<" | "<=" ) shifts )* ;
bitShifts      → term ( ( ">>" | "<<" ) term )*;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary
               | fieldAccess ;

fieldAccess    → methodCall "." IDENT ;
methodCall     → funCall "." IDENT + "(" expression? ("," expression)? ")"; 

funCall        → primary "(" expression? ("," expression)? ")" ;

primary        → NUMBER
               | STRING
			   | "true"
			   | "false" 
               | "(" expression ")"
			   | IDENT 
			   | whileExpr
			   | untilExpr
			   | forExpr
	    	   | loopExpr
			   | ifExpr
			   | arrayExpr
			   | lambdaExpr
			   | funCall 
			   | makeExpr 
			   | returnExpr 
			   | makeExpr
			   | pathExpr
			   | block ;
