theres-lang/src/parser.rs
#[allow(clippy::wildcard_imports)]
use crate::ast::*;
use crate::errors::{DiagEmitter, TheresError};
use crate::lexer::{Lexemes, Token, TokenKind};
use crate::span::Span;
use crate::symbols::SymbolId;

use std::borrow::Cow;

impl TheresError for ParseError {
    fn message(&self) -> Cow<'static, str> {
        match self {
            ParseError::Expected { what, got } => {
                format!("expected {what} but got: {got:?}").into()
            }

            ParseError::EndOfFile => "unexpected end-of-file".into(),

            ParseError::WrongUnaryOp { offender } => {
                format!("can't execute {offender:?} as unary operator").into()
            }

            ParseError::FunctionWithoutBody => "this function is supposed to have a body".into(),

            ParseError::MalformedType => "this type is malformed".into(),

            ParseError::ExpectedDecl { got } => {
                format!("expected the start of a declaration, got: {got}").into()
            }

            ParseError::InvalidPattern => "this pattern is invalid syntatically".into(),

            ParseError::ExpectedExpr => "expected an expression here".into(),

            Self::ExpectedIdentifier(instead) => {
                format!("expected an identifier but got {instead}").into()
            }
        }
    }
}

macro_rules! t {
    ($ident:ident) => {
        TokenKind::$ident
    };
}

crate::newtyped_index!(AstId, AstIdMap, AstIdVec);

type Result<T, E = ParseError> = core::result::Result<T, E>;

#[derive(Debug, PartialEq, PartialOrd, Clone, Copy)]
enum ParseError {
    EndOfFile,
    Expected { what: TokenKind, got: TokenKind },
    ExpectedDecl { got: TokenKind },
    ExpectedExpr,
    WrongUnaryOp { offender: Token },
    MalformedType,
    FunctionWithoutBody,
    InvalidPattern,
    ExpectedIdentifier(TokenKind),
}

enum FunctionPart {
    Signature(FnSig),
    Full(FnDecl),
}

enum ExprOrStmt {
    Stmt(Stmt),
    Expr(Expr),
}

#[derive(Debug, Clone, Copy)]
enum NeedTy {
    Yes,
    No,
}

struct Parser<'a> {
    lexemes: Lexemes,

    id: u32,
    decls: Vec<Thing>,

    diag: &'a DiagEmitter<'a>,
}

pub fn parse<'a>(lexemes: Lexemes, diag: &'a DiagEmitter<'a>) -> Universe {
    let mut parser = Parser {
        lexemes,
        diag,
        id: 0,
        decls: vec![],
    };

    let universe_id = parser.new_id();

    while !parser.lexemes.is_empty() {
        let id = parser.new_id();
        match parser.declaration() {
            Err(..) => {}
            Ok(decl) => parser.decls.push(Thing::new(decl, id)),
        }
    }

    let first = parser.decls.first().map(|elm| elm.kind.span());
    let last = parser.decls.last().map(|elm| elm.kind.span());
    let span = match (first, last) {
        // empty
        (None, None) => Span::DUMMY,
        (Some(l), Some(r)) if l == r => l,
        (Some(l), Some(r)) => Span::between(l, r),
        _ => unreachable!("nonsense scenarios"),
    };

    Universe {
        id: universe_id,
        thingies: parser.decls,
        span,
    }
}

impl Parser<'_> {
    fn new_id(&mut self) -> AstId {
        let id = AstId::new(self.id);
        self.id += 1;
        id
    }

    fn is_next(&self, tok: TokenKind) -> bool {
        self.lexemes.peek_token().kind == tok
    }

    fn declaration(&mut self) -> Result<ThingKind> {
        let tok = self.lexemes.peek_token();

        let decl = match tok.kind {
            TokenKind::Function => ThingKind::Function(self.function_declaration()?),
            TokenKind::Instance => self.instance_decl()?,
            TokenKind::Bind => ThingKind::Bind(self.bind_decl()?),
            TokenKind::Realm => self.realm_decl()?,
            TokenKind::Eof => {
                let prev = self.lexemes.previous();
                self.diag.emit_err(ParseError::EndOfFile, prev.span);

                return Err(ParseError::EndOfFile);
            }
            TokenKind::Native => self.native_block()?,

            got => return Err(ParseError::ExpectedDecl { got }),
        };

        Ok(decl)
    }

    fn native_block(&mut self) -> Result<ThingKind> {
        let kw = self.expect(t!(Native));
        self.expect(t!(LeftCurlyBracket));

        let mut imports = vec![];
        while self.lexemes.peek_token().kind != TokenKind::RightCurlyBracket {
            let import = self.native_import()?;
            imports.push(import);
        }

        let lbrace = self.expect(t!(RightCurlyBracket));

        Ok(ThingKind::NativeBlock(NativeBlock {
            ast_id: self.new_id(),
            span: Span::between(kw.span, lbrace.span),
            item: imports,
        }))
    }

    fn native_import(&mut self) -> Result<NativeImport> {
        let sig = self.function_signature()?;

        Ok(NativeImport {
            ast_id: sig.id,
            span: sig.span,
            kind: NativeImportKind::Fun {
                args: sig.args,
                ret_ty: sig.ret_type,
            },
            name: sig.name,
        })
    }

    fn realm_decl(&mut self) -> Result<ThingKind> {
        let kw = self.expect_token(TokenKind::Realm)?;
        let name = self.expect_ident_as_name()?;
        let mut items = Vec::new();

        self.expect(t!(LeftCurlyBracket));

        while self.lexemes.peek_token().kind != TokenKind::RightCurlyBracket {
            let kind = self.declaration()?;
            let thing = Thing {
                id: self.new_id(),
                kind,
            };
            items.push(thing);
        }

        let rcurly = self.expect(t!(RightCurlyBracket));

        let realm = Realm {
            items,
            name,
            span: Span::between(kw.span, rcurly.span),
        };

        Ok(ThingKind::Realm(realm))
    }

    fn ty(&mut self) -> Result<Ty> {
        let id = self.new_id();
        let tok = self.lexemes.peek_token();
        match tok.kind {
            TokenKind::Function => self.parse_function_type(),
            TokenKind::LeftSqBracket => self.parse_array_type(),

            TokenKind::Identifier(..) => {
                let tok2 = self.lexemes.peek_token();
                if tok2.kind != TokenKind::LeftArrowBracket {
                    let ty = Ty {
                        id,
                        kind: self.path().map(TyKind::Path).unwrap_or(TyKind::Err),
                        span: tok.span,
                    };

                    return Ok(ty);
                }
                self.lexemes.advance();

                let mut ty_params = vec![self.ty()?];
                while self.consume_if(TokenKind::Comma) {
                    ty_params.push(self.ty()?);
                }

                todo!("generics");
            }

            _ => {
                self.lexemes.advance();

                Err(ParseError::MalformedType)
            }
        }
    }

    fn path(&mut self) -> Result<Path> {
        let mut segments = vec![self.path_segment()?];

        while self.consume_if(TokenKind::Path) {
            segments.push(self.path_segment()?);
        }

        let span = Span::between(segments[0].span, segments.last().unwrap().span);

        Ok(Path {
            path: segments,
            span,
            id: self.new_id(),
        })
    }

    fn path_segment(&mut self) -> Result<PathSeg> {
        let name = self.expect_ident_as_name()?;

        Ok(PathSeg {
            name,
            span: name.span,
            id: self.new_id(),
        })
    }

    fn parse_function_type(&mut self) -> Result<Ty> {
        let fun_ident = self.expect_token(TokenKind::Function)?;
        self.expect_token(TokenKind::LeftParen)?;

        let mut types = vec![self.ty()?];

        while self.consume_if(TokenKind::Comma) {
            types.push(self.ty()?);
        }
        self.expect_token(TokenKind::RightParen)?;
        self.expect_token(TokenKind::RightArrow)?;

        let ret = self.ty().map(Box::new)?;

        Ok(Ty {
            span: Span::between(fun_ident.span, ret.span),
            kind: TyKind::Fn {
                args: types,
                ret: Some(ret),
            },
            id: self.new_id(),
        })
    }

    fn parse_array_type(&mut self) -> Result<Ty> {
        let left_sq = self.expect_token(TokenKind::LeftSqBracket)?;
        let ty = self.ty().map(Box::new)?;

        let right_sq = self.expect_token(TokenKind::RightSqBracket)?;

        Ok(Ty {
            kind: TyKind::Array(ty),
            span: Span::between(left_sq.span, right_sq.span),
            id: self.new_id(),
        })
    }

    fn function_signature(&mut self) -> Result<FnSig> {
        let start_span = self.expect_token(TokenKind::Function)?.span;
        let name = self.expect_ident_as_name()?;
        self.expect_token(TokenKind::LeftParen)?;

        let fun_args = self.fun_args()?;

        self.expect_token(TokenKind::RightParen)?;
        self.expect_token(TokenKind::RightArrow)?;

        let ret_type = self.ty()?;

        let span = Span::between(start_span, ret_type.span);
        Ok(FnSig::new(name, span, ret_type, fun_args, self.new_id()))
    }

    fn function_declaration(&mut self) -> Result<FnDecl> {
        match self.function()? {
            FunctionPart::Full(decl) => Ok(decl),

            FunctionPart::Signature(sig) => {
                self.diag
                    .emit_err(ParseError::FunctionWithoutBody, sig.span);
                Err(ParseError::FunctionWithoutBody)
            }
        }
    }

    fn function(&mut self) -> Result<FunctionPart> {
        let sig = self.function_signature()?;

        let maybe_block = if self.lexemes.peek_token().kind == TokenKind::LeftCurlyBracket {
            Some(self.block(None)?)
        } else {
            None
        };

        match maybe_block {
            Some(block) => {
                let span = Span::between(sig.span, block.span);
                let id = self.new_id();
                let fndecl = FnDecl {
                    sig,
                    block,
                    span,
                    id,
                };
                Ok(FunctionPart::Full(fndecl))
            }

            None => Ok(FunctionPart::Signature(sig)),
        }
    }

    fn fun_args(&mut self) -> Result<Vec<Arg>> {
        let mut args = Vec::new();

        if let Some(self_arg) = self.fn_self_arg() {
            args.push(self_arg);
        }

        if self.lexemes.peek_token().kind != TokenKind::RightParen {
            args.push(self.arg(NeedTy::Yes)?);

            while self.consume_if(TokenKind::Comma) {
                args.push(self.arg(NeedTy::Yes)?);
            }
        }

        Ok(args)
    }

    fn arg(&mut self, req: NeedTy) -> Result<Arg> {
        let name = self.expect_ident_as_name()?;

        let ty = match req {
            NeedTy::No => {
                if self.consume_if(t!(Colon)) {
                    self.ty()?
                } else {
                    Ty {
                        kind: TyKind::Infer,
                        id: self.new_id(),
                        span: Span::DUMMY,
                    }
                }
            }
            NeedTy::Yes => {
                self.expect_token(TokenKind::Colon)?;
                self.ty()?
            }
        };

        let id = self.new_id();
        Ok(Arg::new(name, ty, id))
    }

    fn fn_self_arg(&mut self) -> Option<Arg> {
        let tok = self.lexemes.peek_token();

        if tok.is_eof() {
            return None;
        }

        if tok.kind == TokenKind::SelfArg {
            self.lexemes.advance();

            let second_tok = self.lexemes.peek_token();

            if second_tok.kind == TokenKind::Comma {
                self.lexemes.advance();
            }

            let arg = Arg::new(
                Name::new(SymbolId::self_(), tok.span),
                Ty {
                    id: self.new_id(),
                    kind: TyKind::MethodSelf,
                    span: tok.span,
                },
                self.new_id(),
            );

            return Some(arg);
        }

        None
    }

    fn fn_call_args(&mut self) -> Result<Vec<Expr>> {
        if self.lexemes.peek_token().kind == TokenKind::RightParen {
            return Ok(Vec::new());
        }

        let mut args = vec![self.expression()?];

        while self.consume_if(TokenKind::Comma) {
            args.push(self.expression()?);
        }

        Ok(args)
    }

    fn bind_decl(&mut self) -> Result<Bind> {
        let keyword = self.expect_token(TokenKind::Bind)?;
        let ty = self.ty()?;
        self.expect_token(TokenKind::With)?;

        // mask as interface
        let _ = if self.lexemes.peek_token().kind == TokenKind::LeftParen {
            None
        } else {
            Some(self.path()?)
        };

        self.expect_token(TokenKind::LeftParen)?;

        let mut items = vec![];
        while !self.consume_if(TokenKind::RightParen) {
            items.push(self.bind_item()?);
        }

        Ok(Bind {
            victim: ty,
            items,
            span: Span::between(keyword.span, self.lexemes.previous().span),
            id: self.new_id(),
        })
    }

    fn bind_item(&mut self) -> Result<BindItem> {
        let kind = match self.lexemes.peek_token().kind {
            TokenKind::Function => BindItemKind::Fun(self.function_declaration()?),
            _ => todo!(),
        };

        Ok(BindItem {
            kind,
            id: self.new_id(),
        })
    }

    fn instance_decl(&mut self) -> Result<ThingKind> {
        let keyword = self.expect(TokenKind::Instance);
        let name = self.expect_ident_as_name()?;

        self.expect_token(TokenKind::LeftParen)?;

        let fields = self.instance_fields()?;
        let rcurly = self.expect(TokenKind::RightParen);
        let span = Span::between(keyword.span, rcurly.span);

        Ok(ThingKind::instance(
            name,
            span,
            fields,
            self.new_id(),
            self.new_id(),
        ))
    }

    fn instance_fields(&mut self) -> Result<Vec<Field>> {
        fn one_field(me: &mut Parser) -> Result<Field> {
            let span_start = me.lexemes.peek_token().span;
            let is_mut = me.consume_if(TokenKind::Mut);
            let field_name = me.expect_ident_as_name()?;

            me.expect_token(TokenKind::Colon)?;

            let ty = me.ty()?;
            let field_span = Span::between(span_start, ty.span);

            Ok(Field::new(!is_mut, field_name, ty, field_span, me.new_id()))
        }

        let peeked = self.lexemes.peek_token();
        if peeked.kind == TokenKind::RightCurlyBracket {
            return Ok(Vec::new());
        }

        let mut fields = vec![one_field(self)?];
        while self.consume_if(TokenKind::Comma) {
            if self.lexemes.peek_token().kind != TokenKind::RightCurlyBracket {
                fields.push(one_field(self)?);
            }
        }

        Ok(fields)
    }

    fn local_variable_stmt(&mut self) -> Result<VariableStmt> {
        self.expect(t!(Let));
        let mutt = if self.consume_if(t!(Mut)) {
            VarMode::Mut
        } else {
            VarMode::Immut
        };

        let name = self.expect_ident_as_name()?;
        let ty = self.consume_if(t!(Colon)).then(|| self.ty()).transpose()?;

        let consumed = !self.consume_if(t!(Semicolon));
        let init = consumed
            .then(|| {
                self.expect(t!(Assign));
                let expr = self.expression()?;
                self.expect(t!(Semicolon));
                Ok(expr)
            })
            .transpose()?;

        Ok(VariableStmt {
            mode: mutt,
            name,
            init,
            ty,
            id: self.new_id(),
        })
    }

    fn statement(&mut self) -> Result<ExprOrStmt> {
        let tok = self.lexemes.peek_token();
        let id = self.new_id();
        let stmt = match tok.kind {
            TokenKind::Let | TokenKind::Const => StmtKind::LocalVar(self.local_variable_stmt()?),

            TokenKind::Function => StmtKind::Thing(Thing::new(self.declaration()?, id)),

            _ => {
                let expr = self.expression()?;

                if self.consume_if(TokenKind::Semicolon) {
                    StmtKind::Expr(expr)
                } else {
                    let ret = ExprOrStmt::Expr(expr);
                    return Ok(ret);
                }
            }
        };

        let span = stmt.span();

        let stmt = Stmt {
            kind: stmt,
            span,
            id: self.new_id(),
        };

        Ok(ExprOrStmt::Stmt(stmt))
    }

    fn block(&mut self, label: Option<Label>) -> Result<Block> {
        let label = label.unwrap_or(Label::implicit(self.new_id()));

        let span_start = self.expect(t!(LeftCurlyBracket)).span;
        let mut stmts = Vec::new();
        let mut expr = None;

        while self.lexemes.peek_token().kind != TokenKind::RightCurlyBracket {
            match self.statement()? {
                ExprOrStmt::Stmt(stmt) => stmts.push(stmt),

                ExprOrStmt::Expr(e) => {
                    expr = Some(e);
                    break;
                }
            }
        }

        let span_end = self.expect(t!(RightCurlyBracket)).span;

        let span = Span::between(span_start, span_end);

        Ok(Block {
            stmts,
            span,
            id: self.new_id(),
            expr: expr.map(Box::new),
            label,
        })
    }

    fn label(&mut self) -> Result<Label> {
        let name = self.expect_ident_as_name()?;
        self.expect(t!(Colon));

        Ok(Label {
            name,
            id: self.new_id(),
        })
    }

    fn expression(&mut self) -> Result<Expr> {
        self.assignment()
    }

    fn if_expr(&mut self) -> Result<Expr> {
        let begin = self.expect_token(TokenKind::If)?;
        let expr = self.expression()?;

        let first_block = self.block(None)?;

        let mut end = first_block.span;
        let mut else_ifs = Vec::new();
        let mut otherwise = None;

        // just an `if <expr> <block>`
        if !self.consume_if(TokenKind::Else) {
            return Ok(Expr::new(
                ExprType::If {
                    cond: Box::new(expr),
                    if_block: first_block,
                    else_ifs,
                    otherwise,
                },
                Span::between(begin.span, end),
                self.new_id(),
            ));
        }

        // just an `if <expr> <block> else <block>`
        if !self.consume_if(TokenKind::If) {
            otherwise = Some(self.block(None)?);
            return Ok(Expr::new(
                ExprType::If {
                    cond: Box::new(expr),
                    if_block: first_block,
                    else_ifs,
                    otherwise,
                },
                Span::between(begin.span, end),
                self.new_id(),
            ));
        }

        // `if <expr> <block> else if <expr> <block> ... (else <block>)?`
        let cond = self.expression()?;
        let block = self.block(None)?;
        else_ifs.push(ElseIf::new(cond, block));

        while self.consume_if(TokenKind::Else) && self.consume_if(TokenKind::If) {
            let cond = self.expression()?;
            let block = self.block(None)?;
            end = block.span;
            else_ifs.push(ElseIf::new(cond, block));
        }

        if self.lexemes.previous().kind == TokenKind::Else {
            let block = self.block(None)?;
            end = block.span;
            otherwise.replace(block);
        }

        Ok(Expr::new(
            ExprType::If {
                cond: Box::new(expr),
                if_block: first_block,
                else_ifs,
                otherwise,
            },
            Span::between(begin.span, end),
            self.new_id(),
        ))
    }

    fn loop_expr(&mut self, label: Option<Label>) -> Result<Expr> {
        let label = label.unwrap_or(Label {
            name: Name::DUMMY,
            id: self.new_id(),
        });

        let loop_ident = self.expect_token(TokenKind::Loop)?;
        let body = self.block(None)?;
        let span = Span::between(loop_ident.span, body.span);

        Ok(Expr::new(
            ExprType::Loop { body, label },
            span,
            self.new_id(),
        ))
    }

    fn for_loop(&mut self) -> Result<Expr> {
        let for_ident = self.expect_token(TokenKind::For)?;
        let pat = self.pat()?;

        self.expect_token(TokenKind::In)?;

        let iterable = self.expression().map(Box::new)?;

        let body = self.block(None)?;
        let span = Span::between(for_ident.span, body.span);

        Ok(Expr::new(
            ExprType::For {
                iterable,
                pat,
                body,
            },
            span,
            self.new_id(),
        ))
    }

    fn pat(&mut self) -> Result<Pat> {
        let token = self.lexemes.next_token();
        let pat = match token.kind {
            TokenKind::Underscore => Pat::new(PatType::Wild, token.span),

            TokenKind::Identifier(id) => {
                let name = Name::new(id, token.span);
                Pat::new(PatType::Ident { name }, token.span)
            }

            TokenKind::LeftParen => {
                let pat = self.pat()?;
                let mut pats = vec![pat];

                while self.lexemes.peek_token().kind != TokenKind::RightParen {
                    self.expect_token(TokenKind::Comma)?;
                    pats.push(self.pat()?);
                }

                let right_paren = self.expect(t!(RightParen));

                Pat::new(
                    PatType::Tuple { pats },
                    Span::between(token.span, right_paren.span),
                )
            }

            _ => {
                self.diag.emit_err(ParseError::InvalidPattern, token.span);

                return Ok(Pat::new(PatType::Err, token.span));
            }
        };

        Ok(pat)
    }

    pub fn while_expr(&mut self) -> Result<Expr> {
        let while_ident = self.expect_token(TokenKind::While)?;
        let cond = self.expression().map(Box::new)?;

        let body = self.block(None)?;
        let span = Span::between(while_ident.span, body.span);

        Ok(Expr::new(
            ExprType::While {
                cond,
                body,
                label: Label::implicit(self.new_id()),
            },
            span,
            self.new_id(),
        ))
    }

    pub fn until_expr(&mut self) -> Result<Expr> {
        let until_ident = self.expect_token(TokenKind::Until)?;
        let cond = self.expression().map(Box::new)?;
        let body = self.block(None)?;
        let span = Span::between(until_ident.span, body.span);

        Ok(Expr::new(
            ExprType::Until {
                cond,
                body,

                label: Label::implicit(self.new_id()),
            },
            span,
            self.new_id(),
        ))
    }

    pub fn lambda_expr(&mut self) -> Result<Expr> {
        let slash = self.expect(TokenKind::Backslash);
        let mut args = Vec::new();

        if !self.is_next(t!(RightArrow)) {
            args.push(self.arg(NeedTy::No)?);
            while self.consume_if(TokenKind::Comma) {
                args.push(self.arg(NeedTy::No)?);
            }
        }

        self.expect(TokenKind::RightArrow);
        let body = if self.is_next(t!(LeftCurlyBracket)) {
            let label = if let TokenKind::Identifier(..) = self.lexemes.peek_token().kind {
                Some(self.label()?)
            } else {
                None
            };

            LambdaBody::Block(self.block(label)?)
        } else {
            LambdaBody::Expr(self.expression().map(Box::new)?)
        };

        let span = Span::between(slash.span, body.span());
        Ok(Expr {
            ty: ExprType::Lambda { args, body },
            id: self.new_id(),
            span,
        })
    }

    pub fn list_expr(&mut self) -> Result<Expr> {
        let left_sq = self.expect_token(TokenKind::LeftSqBracket)?;
        let mut exprs = vec![];

        loop {
            if self.lexemes.peek_token().kind == TokenKind::RightSqBracket {
                break;
            } else if self.lexemes.previous().kind != TokenKind::LeftSqBracket {
                self.expect(t!(Comma));
            }

            exprs.push(self.expression()?);
        }

        let right_sq = self.expect(TokenKind::RightSqBracket);

        Ok(Expr::new(
            ExprType::List(exprs),
            Span::between(left_sq.span, right_sq.span),
            self.new_id(),
        ))
    }

    fn assignment(&mut self) -> Result<Expr> {
        let lvalue = self.bitwise_or()?;

        let tok = self.lexemes.peek_token();
        let mode = match tok.kind {
            TokenKind::Assign => AssignMode::Regular,
            TokenKind::AddAssign => AssignMode::Add,
            TokenKind::SubAssign => AssignMode::Sub,
            TokenKind::MulAssign => AssignMode::Mul,
            TokenKind::DivAssign => AssignMode::Div,
            TokenKind::ShlAssign => AssignMode::Shl,
            TokenKind::ShrAssign => AssignMode::Shr,
            TokenKind::ModAssign => AssignMode::Mod,
            TokenKind::BitXorAssign => AssignMode::Xor,
            TokenKind::BitOrAssign => AssignMode::Or,
            TokenKind::BitAndAssign => AssignMode::And,

            _ => return Ok(lvalue),
        };

        self.lexemes.advance();

        let rvalue = self.assignment()?;
        let span = Span::between(lvalue.span, rvalue.span);

        let expr_ty = ExprType::Assign {
            lvalue: Box::new(lvalue),
            rvalue: Box::new(rvalue),
            mode,
        };

        Ok(Expr::new(expr_ty, span, self.new_id()))
    }

    fn bitwise_or(&mut self) -> Result<Expr> {
        let mut lhs = self.bitwise_xor()?;

        let start = lhs.span;

        while self.consume_if(TokenKind::BitOr) {
            let rhs = self.bitwise_xor()?;
            let span = Span::between(start, rhs.span);
            let expr_ty = ExprType::BinaryExpr {
                lhs: Box::new(lhs),
                rhs: Box::new(rhs),
                op: BinOp::BitOr,
            };

            lhs = Expr::new(expr_ty, span, self.new_id());
        }

        Ok(lhs)
    }

    fn bitwise_xor(&mut self) -> Result<Expr> {
        let mut lhs = self.bitwise_and()?;
        let start = lhs.span;

        while self.consume_if(TokenKind::Xor) {
            let rhs = self.bitwise_and()?;
            let span = Span::between(start, rhs.span);
            let expr_ty = ExprType::BinaryExpr {
                lhs: Box::new(lhs),
                rhs: Box::new(rhs),
                op: BinOp::BitXor,
            };

            lhs = Expr::new(expr_ty, span, self.new_id());
        }

        Ok(lhs)
    }

    fn bitwise_and(&mut self) -> Result<Expr> {
        let mut lhs = self.logic_or()?;
        let start = lhs.span;

        while self.consume_if(TokenKind::BitAnd) {
            let rhs = self.logic_or()?;
            let span = Span::between(start, rhs.span);
            let expr_ty = ExprType::BinaryExpr {
                lhs: Box::new(lhs),
                rhs: Box::new(rhs),
                op: BinOp::BitAnd,
            };

            lhs = Expr::new(expr_ty, span, self.new_id());
        }

        Ok(lhs)
    }

    fn logic_or(&mut self) -> Result<Expr> {
        let mut lhs = self.logic_and()?;
        let start = lhs.span;

        while self.consume_if(TokenKind::LogicalOr) {
            let rhs = self.logic_and()?;
            let span = Span::between(start, rhs.span);
            let expr_ty = ExprType::BinaryExpr {
                lhs: Box::new(lhs),
                rhs: Box::new(rhs),
                op: BinOp::LogicalOr,
            };

            lhs = Expr::new(expr_ty, span, self.new_id());
        }

        Ok(lhs)
    }

    fn logic_and(&mut self) -> Result<Expr> {
        let mut lhs = self.equality()?;
        let start = lhs.span;

        while self.consume_if(TokenKind::LogicalAnd) {
            println!("logic_and!");
            let rhs = self.equality()?;
            let span = Span::between(start, rhs.span);
            let expr_ty = ExprType::BinaryExpr {
                lhs: Box::new(lhs),
                rhs: Box::new(rhs),
                op: BinOp::LogicalAnd,
            };

            lhs = Expr::new(expr_ty, span, self.new_id());
        }

        Ok(lhs)
    }

    fn equality(&mut self) -> Result<Expr> {
        let mut lhs = self.comparison()?;

        while self.consume_if(TokenKind::NotEqual) || self.consume_if(TokenKind::Equals) {
            let tkn = self.lexemes.previous();
            let op = match tkn.kind {
                TokenKind::NotEqual => BinOp::NotEquality,
                TokenKind::Equals => BinOp::Equality,
                _ => unreachable!(),
            };

            let rhs = self.comparison()?;
            let span = Span::between(lhs.span, rhs.span);
            let expr_ty = ExprType::BinaryExpr {
                lhs: Box::new(lhs),
                rhs: Box::new(rhs),
                op,
            };

            lhs = Expr::new(expr_ty, span, self.new_id());
        }

        Ok(lhs)
    }

    fn comparison(&mut self) -> Result<Expr> {
        let mut lhs = self.bit_shifts()?;
        while self.consume_if(TokenKind::GtEq)
            || self.consume_if(TokenKind::RightArrowBracket)
            || self.consume_if(TokenKind::LeftArrowBracket)
            || self.consume_if(TokenKind::LtEq)
        {
            let tkn = self.lexemes.previous();
            let op = match tkn.kind {
                TokenKind::GtEq => BinOp::GreaterOrEq,
                TokenKind::RightArrowBracket => BinOp::Greater,
                TokenKind::LeftArrowBracket => BinOp::Lesser,
                TokenKind::LtEq => BinOp::LesserOrEq,

                _ => unreachable!(),
            };

            let rhs = self.bit_shifts()?;
            let span = Span::between(lhs.span, rhs.span);
            let expr_ty = ExprType::BinaryExpr {
                lhs: Box::new(lhs),
                rhs: Box::new(rhs),
                op,
            };

            lhs = Expr::new(expr_ty, span, self.new_id());
        }

        Ok(lhs)
    }

    fn bit_shifts(&mut self) -> Result<Expr> {
        let mut lhs = self.term()?;

        while self.consume_if(TokenKind::ShiftLeft) || self.consume_if(TokenKind::ShiftRight) {
            let op = match self.lexemes.previous().kind {
                TokenKind::ShiftLeft => BinOp::Shl,
                TokenKind::ShiftRight => BinOp::Shr,

                _ => unreachable!(),
            };

            let rhs = self.term().map(Box::new)?;
            let span = Span::between(lhs.span, rhs.span);

            lhs = Expr::new(
                ExprType::BinaryExpr {
                    lhs: Box::new(lhs),
                    rhs,
                    op,
                },
                span,
                self.new_id(),
            );
        }

        Ok(lhs)
    }

    fn term(&mut self) -> Result<Expr> {
        let mut lhs = self.factor()?;

        while self.consume_if(TokenKind::Plus) || self.consume_if(TokenKind::Minus) {
            let tkn = self.lexemes.previous();
            let op = match tkn.kind {
                TokenKind::Plus => BinOp::Add,
                TokenKind::Minus => BinOp::Sub,

                _ => unreachable!(),
            };

            let rhs = self.factor()?;
            let span = Span::between(lhs.span, rhs.span);
            let expr_ty = ExprType::BinaryExpr {
                lhs: Box::new(lhs),
                rhs: Box::new(rhs),
                op,
            };

            lhs = Expr::new(expr_ty, span, self.new_id());
        }

        Ok(lhs)
    }

    fn factor(&mut self) -> Result<Expr> {
        let mut lhs = self.unary()?;

        while self.consume_if(TokenKind::Slash) || self.consume_if(TokenKind::Star) {
            let tkn = self.lexemes.previous();
            let op = match tkn.kind {
                TokenKind::Star => BinOp::Mul,
                TokenKind::Slash => BinOp::Div,

                _ => unreachable!(),
            };

            let rhs = self.unary()?;
            let span = Span::between(lhs.span, rhs.span);
            let expr_ty = ExprType::BinaryExpr {
                lhs: Box::new(lhs),
                rhs: Box::new(rhs),
                op,
            };

            lhs = Expr::new(expr_ty, span, self.new_id());
        }

        Ok(lhs)
    }

    fn unary(&mut self) -> Result<Expr> {
        if self.consume_if(TokenKind::ExclamationMark) || self.consume_if(TokenKind::Minus) {
            let tok = self.lexemes.previous();

            let op = match tok.kind {
                TokenKind::BitAnd => UnaryOp::AddrOf,
                TokenKind::Star => UnaryOp::Deref,
                TokenKind::ExclamationMark => UnaryOp::Not,
                TokenKind::Minus => UnaryOp::Negation,
                _ => {
                    let span = tok.span;
                    self.diag
                        .emit_err(ParseError::WrongUnaryOp { offender: tok }, span);
                    return Ok(Expr::new(ExprType::Err, span, self.new_id()));
                }
            };

            let primary = self.unary()?;
            let span = Span::between(tok.span, primary.span);
            let expr_ty = ExprType::UnaryExpr {
                op,
                target: Box::new(primary),
            };

            return Ok(Expr::new(expr_ty, span, self.new_id()));
        }

        self.index_expr()
    }

    fn index_expr(&mut self) -> Result<Expr> {
        let mut expr = self.field_access_or_method_call()?;

        while self.consume_if(t!(LeftSqBracket)) {
            let index = self.expression().map(Box::new)?;
            let rbrkt = self.expect(t!(RightSqBracket));
            let span = expr.span;
